--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_add_geo_fence">Add Geofence</string>
     <string name="title_activity_tracking">Tracking</string>
 
     <string name="transition_reveal1">transition_reveal1</string>
@@ -19,4 +20,15 @@
     <string name="unknown">Unknown activity</string>
     <string name="walking">Walking</string>
     <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
+    <string name="title_activity_geo_fence_list">GeoFenceListActivity</string>
+    <string name="title_activity_set_geo_fence">Map</string>
+    <string name="where_do_you_shred">Where do you shred?</string>
+    <string name="err_location_service_connection_fail">Cannot connect to Location Service</string>
+    <string name="enter_resort_name">Enter resort/city name here</string>
+    <string name="err_no_location">Unable to get current location, please check your location setting</string>
+    <string name="got_it">GOT IT</string>
+    <string name="geo_fence_snack_bar_tutorial">Shred machine will turn on automatically when you enter the circle</string>
+    <string name="action_save">SAVE</string>
+    <string name="radius">Radius</string>
+    <string name="radius_km">%1$s KM</string>
 </resources>
